- weights and biases are also visualized before training - generated mass spec data is now also stored in a .mgf file - clustering of latent space; needs some more tweaking though.. - parameter for training on the identified/unidentified mass spec data alone - mass spec encoding with charges as label - some more analysis: plot spectrum for a specific sequence and charge - updated swagger to work with mass spec data
